# rustpi

./: .gitignore  LICENSE  README.md  Vagrantfile
boot/: cmdline.txt  config.txt
docs/: BUILDING.md  DEBUGGING.md
init/: Cargo.toml
init/src/: main.rs
output/: .gitkeep
rootfs/etc/: hostname
scripts/: 00-build-all.sh  01-clone-repos.sh  02-build-kernel.sh  03-build-init.sh  04-build-busybox.sh  05-build-dropbear.sh  06-create-rootfs.sh  07-create-image.sh  build-all.sh  build-busybox.sh  build-dropbear.sh  build-init.sh  clean.sh  create-image.sh  create-rootfs.sh  flash-sd.sh
