[package]
name = "rustpi-init"
version = "0.5.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Minimal init system for RustPi Linux distribution"
license = "MIT"
repository = "https://github.com/YOUR_USERNAME/rustpi"

[dependencies]
nix = { version = "0.29", features = ["mount", "signal", "process", "fs", "hostname"] }
libc = "0.2"

[profile.release]
opt-level = "s"      # Optimize for size
lto = true           # Link-time optimization
strip = true         # Strip symbols
panic = "abort"      # Smaller binary
codegen-units = 1    # Better optimization
