[package]
name = "rustpi-init"
version = "0.5.0"
edition = "2021"
authors = ["Sbonelo"]
description = "Minimal init system for RustPi Linux distribution"
license = "MIT"
repository = "https://github.com/sbonelo/rustpi"

[dependencies]
nix = { version = "0.29", features = ["mount", "signal", "process", "fs", "hostname"] }
libc = "0.2"

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
codegen-units = 1
